docs: Fix version warning box size on mobile

--- a/docs/css/index.css
+++ b/docs/css/index.css
@@ -223,9 +223,11 @@ tr:last-child td {
 
 .warning {
 	inline-size: max-content;
+	max-width: calc(100% - 1rem);
+	line-height: 140%;
 	margin: 0.2rem auto;
 	background-color: #fff00fff;
-	padding: 0 0.5rem;
+	padding: 0.25rem 0.5rem;
 }
 
 .warning a {
